--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -2,21 +2,23 @@
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="../index.css" />
 #+OPTIONS: num:nil
 
-Club-drill was excruciating in the Grav and Gog in ways that they couldn't manage to communicate to others. It was mostly about being told what to do and criticized by the ignorant and linear thinkers that were inevitably the "top bronze".
+Club-drill was excruciating to the Grav and Gog in ways that they couldn't manage to communicate to others. It was mostly about being told what to do and criticized by the ignorant and linear thinkers that were inevitably the "top bronze"; often criticized for doing exactly what you were told.
 
 Another concept they couldn't explain nor even know of its existence is "selection bias". It's a subtle idea. It would be a while before that idea got identified and tagged.
 
-In words that a Crec might understand: The cavemen who made their way to the top in the hierarchy were the type who really liked bossing people about, the wisdom of their plans for you was not part of their calculations. Given enough cavemen, you will find some outliers. You may not know anyone who likes to give orders, doesn't like to be questioned, and doesn't care whether they are "right" by /your/ definition. But how many CO's[fn:: Caveman Officer] do we need? Not many. And they'll find their way toward their dream job. Everyone should. Recruiting was no small part of the Armed-Forest. Outreach, recruitment and other kinds of advertising paid off in organization growth, as it is meant to do.
+In words that a Crec might understand: The cavemen who made their way to the top in the hierarchy were the type who really liked bossing people about; the wisdom of their plans for /you/ was not part of their calculations.
 
-You could and probably would some day be drafted. But to make a career out of it was a different tack. If you were not a CO, you pretty much spent all your time learning to kill or killing. They were more the managerial type.
+Given enough cavemen, you will find some outliers. You may not know anyone who likes to give orders, doesn't like to be questioned, and doesn't care whether they are "right" by /your/ definition, but how many CO's[fn:: Caveman Officer] does one need? Not many. And they'll find their way toward their dream job. Everyone should. Recruiting was no small part of the Armed-Forest. Outreach, recruitment and other kinds of advertising paid off in their growth, and in the recruitment of certain "roles".
 
-And so, since your fate, if a man, was to be involved in all this anyway, /completely voluntary/ "club-drill" was held in locations around the Forest. They were usually overseen by some Great Bear war hero, and the training ground nearest Bhorv Zolk was Choh-Ov, surrounded by a kind of suburb called Fayt-Caves, was run by Verk. The title of this role, the camp head, was Mother Bear[fn:: Absolutely no one saw a hint of humor or absurdity in this title. Yes, it was well known that mother bears are female, but mother bears were fierce as monkey-business.]. Verk was Choh-Ov's Mother Bear.
+As a Crec, you could and probably would some day be drafted. But to make a career out of it was a different tack. If you were not a CO, you pretty much spent all your time either killing, being killed, or learning to kill. CO's were more the managerial type.
 
-Fayt-Caves was a shanty town, but made out of rock, which really looks nicer than shanty, any way you cut it. The settlement surrounding Choh-Ov was seedy, crime-ridden, full of loud parties on an ongoing basis, had an entire district devoted to hire-baby-makers and their trade. Choh-Ov was more or less at the very center of this fried egg of empty calories.
+And so, since your fate, if a man, was to be involved in all this anyway, /completely voluntary/ "club-drill" was held in locations around the Forest. They were usually overseen by some Great Bear war hero. The training ground nearest Bhorv Zolk, called Choh-Ov, was surrounded by a kind of suburb named Fayt-Caves, and was run by Verk. The title of this role, the camp head, was Mother Bear[fn:: Absolutely no one saw a hint of humor or absurdity in this title. Yes, it was well known that mother bears are female, but mother bears were and are fierce as monkey-business.]. Verk was Choh-Ov's Mother Bear.
 
-And it was small-knowledge[fn:: 'small[-one]-knowledge': common sense, widely known.] that this was the arrangement surrounding more or less every training camp <-xxx in the Forest and its protectorates. No one thought this amiss. It was small-knowledge.
+Fayt-Caves was a shanty town, but made out of rock, which really looks nicer than shanty any way you cut it. The settlement surrounding Choh-Ov was seedy, crime-ridden, full of loud parties on an ongoing basis, had an entire district devoted to hire-baby-makers and their trade. Choh-Ov was more or less at the very center of this fried egg of empty calories.
 
-Grav and Gog had decided to leave the day after the revelation of Ender's-Sword giving them the opportunity to take make a leisurely day of it, needing only to cover 2 all-finger palm of pretty standard jungle, with the way well traveled and therefor clearly marked, well serviced by vendors, and safe-with-many. They had even let themselves sleep in a bit. Since the final part of a journey crossed a wide, flat, scrubby plane and the moon was sufficiently bright, they would be able to walk for hours after dark set in.
+And it was small-knowledge[fn:: 'small[-one]-knowledge': common sense, widely known.] that this was the arrangement surrounding more or less every clubbing-camp in the Forest and its protectorates. No one thought this amiss. It was small-knowledge[fn:: This effect was also seen surrounding Crec's very few places of high learning, 'scratching-camps'].
+
+Grav and Gog had decided to leave the day after the revelation of Ender's-Sword giving them the opportunity to take make a leisurely day of it, needing only to cover 2 all-finger palm <-xxx don't seem like a day-trip xxx of pretty standard jungle and woods, with the way well traveled and therefor clearly marked, well serviced by vendors, and safe-with-many. They had even let themselves sleep in a bit. Since the final part of a journey crossed a wide, flat, scrubby plane and the moon was sufficiently bright, they would be able to walk for hours after dark set in.
 
 In the worst case, they planned to bevvy one night, wake up early and arrive at the Choh-Ov before reveille <-xxx.
 
@@ -225,7 +227,7 @@ I switched from protecting my eyes to protecting my groin as fast as I was able,
 
 He took up /all/ of my parts, and then some, squeezed with his mighty beak and pulled. Of course he had flipped me over at this point and was putting new holes in my front half.
 
-For him it truely was effortless. The shock and horror I was experiencing at the moment was a kind of protection for me. I don't know how the reflect-soul works, but I can recall no pain at all.
+For him it truly was effortless. The shock and horror I was experiencing at the moment was a kind of protection for me. I don't know how the reflect-soul works, but I can recall no pain at all.
 
 I just remember how effortlessly he tore off what to me was the most important part of my body at the time. It was like the meat had been scored deeply in advance. It just came right off and went down his thoat, her making a whole-body bob as he she tossed it down her own throat.
 
@@ -267,9 +269,9 @@ I will say that when I finally got back, /before/ the many moons of rest with th
 
 I had to have been there, slowly recovering in that massive bed of moss for at least all-finger days, with no food, water or awareness.
 
-I was just a hopeless husk of a caveman when I was able to, using only gravity <-xxx and a lot of wiggling, start my desent, towards what or who, I had no idea. I was existing as a beetle exists. I was just mindlessly surviving.
+I was just a hopeless husk of a caveman when I was able to, using only down-power and a lot of wiggling, start my descent, towards what or who, I had no idea. I was existing as a beetle exists. I was just mindlessly surviving.
 
-At some point I was lucky enough to wiggle my way into a brook that I had heard getting nearer for many palm. I fell face first and imedately begian to slurp. I sulurrped until I was full, and then slurped some more, I would sometimes throw up half, but start drinking right away again just the same, for blood comes from water and I had lost most.
+At some point I was lucky enough to wiggle my way into a brook that I had heard getting nearer for many palm. I fell face first and immediately began to slurp. I slurped until I was full, and then slurped some more, I would sometimes throw up half, but start drinking right away again just the same, for blood comes from water and I had lost most.
 
 xxx
 #+end_quote
