--- a/002.org
+++ b/002.org
@@ -43,7 +43,7 @@ Verk automatically smiled broadly at Grav as he walked into the otherwise empty 
 
 What have I done? Please, believe me; my conscience is free and I want to learn from you."
 
-"Your conscience is free, huh? No, I want you to think on it. That's what you need. Verk stared with noticeable anger still. Nice of you to at least notice I'm put-out with you. Your lot forgotten a lot more than you think you know.
+"Your conscience is free, huh? No, I want you to think on it. That's what you need. Verk stared with noticeable anger still. Nice of you to at least notice I'm put-out with you. Your lot forgotten a lot more than you think you know."
 
 While trying to decipher that, Grav was sure at least some kind of helpful hint was to follow. It seemed to break the very rules of caveperson communication to just leave things hanging like this. He raised his eyebrows in a careful effort to relay this observation, gave up, closed his eyes and did his best at a 'reset', so he could think.
 
@@ -75,7 +75,7 @@ Verk hissed again but Grav now could see that he was huffing with contempt, with
 
 "Yeah." is all Verk said.
 
-He turned on his heels and said to Grav while leaving, "Keep your entails on the inside."
+He turned on his heels and said to Grav while leaving, "Keep your entrails on the inside."
 
 The click of his hyena spurs[fn:: These are raptor talon that are strung by sinew so that they point backwards and downwards from the heel, with just one talon per foot, but they are large and serve their function. They are fastened strongly, but often with just enough slack so that the talon makes an audible "click" while the wearer walks around in-cave.] faded down the entranceway.
 
@@ -109,21 +109,21 @@ The practiced, efficient jog an experienced Forest-man slipped into while follow
 
 This also had to be done in time with a rhythm that maximized your breathing and even your heartbeat's efficiency; a serious constraint, if you were a long-term thinker. Exhale on down-stride when possible, especially if you think your heart needs a good squeeze; inhale on the rebound, when your torso unwinds itself like a spring, guided by the big breathing muscles to fill your lungs with air.
 
-The top of your vision saw the upcoming terrain, which you keep scanning for possible complications. In the lower, nearer part of your vision, you make fine adjustments to your macro plans, given new information: This rock has wet moss. That footfall has deer scat that we mustn't stir up[fn:: Hunters knew that if the were just /traveling/ and were willing to sacrifice game abundance in the area for maybe the next few palms, it would definitely do no harm to purposely step in, and spread the scat of any predator, but freshened /game/ scat attracted predators.]. That limb will break if I land this stride on it. And of course there was the built-in constraint of trying to make as little noise as possible, and to not step on anything spiny and deadly, and to continue making no noise even if you do, which added to the immersive challenged that often helped one to think more clearly. So Grav thought at least.
+The top of your vision saw the upcoming terrain, which you keep scanning for possible complications. In the lower, nearer part of your vision, you make fine adjustments to your macro plans, given new information: This rock has wet moss. That footfall has deer scat that we mustn't stir up[fn:: Hunters knew that if the were just /traveling/ and were willing to sacrifice game abundance in the area for maybe the next few palms, it would definitely do no harm to purposely step in, and spread the scat of any predator, but freshened /game/ scat attracted predators.]. That limb will break if I land this stride on it. And of course there was the built-in constraint of trying to make as little noise as possible, and to not step on anything spiny and deadly, and to continue making no noise even if you do, which added to the immersive challenge that often helped one to think more clearly. So Grav thought at least.
 
 This, he discovered, was a cultivatable state: Get into the groove right away and you'll have a pleasant ride as a passenger in your own body. Your mind is now free to wander about the Forest.
 
-Gog felt the same way. For them, even more than most elite Hunters, traveling through the forest was fast, reliably breezy, pleasant, and just no big deal. It was a kind of lounging for them. It could be done for hours on end with few breaks (which were their own treat), possibly bringing you to a part of the Forest that, despite being a well-traveled caveman of late-age[fn:: A classification to which both men belong. At this time, Grav is 36 and Gog 37.], you had never seen before. And there were landscapes that even these people, however traveled of the infinite, abundant Forest, would stop stunned to gauze at for lengths of time, mouth agape.
+Gog felt the same way. For them, even more than most elite Hunters, traveling through the forest was fast, reliably breezy, pleasant, and just no big deal. It was a kind of lounging for them. It could be done for hours on end with few breaks (which were their own treat), possibly bringing you to a part of the Forest that, despite being a well-traveled caveman of late-age[fn:: A classification to which both men belong. At this time, Grav is 36 and Gog 37.], you had never seen before. And there were landscapes that even these people, however traveled of the infinite, abundant Forest, would stop stunned to gaze at for lengths of time, mouth agape.
 
 This meditation and thinking went on for both men for a little over a palm as they flexed and honed their fundamental survival systems, both muscle and mind. It was surprisingly pleasant to be so wasteful of energy, Grav often thought.
 
-Their usual first stop on this route was a small falls near The Great Crocodile lake, a semicircular lake near a bend in The Lame Rhino. Standing on a high stone on the upper bank, you could see about half of the lake; the far, rounded shore. It had its name due five-man-long, angry bull[fn:: You rightly ask, 'how do we know?' The story is known as "Khrob's Muddy Trap-Burrow"] crocodile that would not bother with you so long as you didn't get within a quarter mile of /its/ lake.
+Their usual first stop on this route was a small falls near The Great Crocodile lake, a semicircular lake near a bend in The Lame Rhino. Standing on a high stone on the upper bank, you could see about half of the lake; the far, rounded shore. It got its name from a five-man-long, angry bull[fn:: You rightly ask, 'how do we know?' The story is known as "Khrob's Muddy Trap-Burrow"] crocodile that would not bother with you so long as you didn't get within a quarter mile of /its/ lake.
 
 The croc died in the men's youth, but they both remember having to take the shortcut across the adjacent bend in the river, and being lectured by their parents all the while about exactly what the situation was and exactly what the stakes were. Parents knew how and when to scare their children dumb, to great effect. Crec parents were otherwise reputed to be very loving toward their children. Mostly. It was considered a "daring" thing to follow the river here until just about all-finger year ago.
 
 In the comparative quiet, with the nearby cascade only a gurgle, Gog turned to Grav.
 
-"So, I was thinking. These veins run in parallel, probably. I mean, I've seen that in lots of places with regular rock. And the vein goes from within the earth, upwards, which is /also/ where you see the parallel veins in regular rock. A vein of reflect-stone[fn:: Quartz. Both for the obvious reason and also because of what is being discussed here: a vein of quarts has concentrated mirror powers strong enough to create another one, just like it, feet away. It is thought that the formation of a reflected vein of reflect-stone has never been observed because whenever they appeared, they must have appeared together. Crec did not recoil in terror at their reflection. They had mirrors of various types. But they did have a very mystical concept of a "reflection" and didn't blithely play around with mirrors.] often has a parallel twin a man or two away, to one side or the other. And most value-stone grow in neat patterns, just like reflect-stone.
+"So, I was thinking. These veins run in parallel, probably. I mean, I've seen that in lots of places with regular rock. And the vein goes from within the earth, upwards, which is /also/ where you see the parallel veins in regular rock. A vein of reflect-stone[fn:: Quartz. Both for the obvious reason and also because of what is being discussed here: a vein of quartz has concentrated mirror powers strong enough to create another one, just like it, feet away. It is thought that the formation of a reflected vein of reflect-stone has never been observed because whenever they appeared, they must have appeared together. Crec did not recoil in terror at their reflection. They had mirrors of various types. But they did have a very mystical concept of a "reflection" and didn't blithely play around with mirrors.] often has a parallel twin a man or two away, to one side or the other. And most value-stone grow in neat patterns, just like reflect-stone.
 
 Since we know that the river has eroded much of one side, snaking in and out; it pretty much parallels our first 'vein'[fn:: Gog was being colorful with his language because when they said 'vein' it referred to a /pattern of deposits/ and not much more. It was assumed to be a vein of sorts because it seemed to go in a straight line and keep producing even if you dug downward.], I'm thinking lets concentrate on upstream where it cuts in and out of a vein that might have been there."
 
@@ -139,7 +139,7 @@ Grav was quite for a bit and then spoke. "Gog?"
 
 "How do you feel about Father-Brother Verk?"
 
-Gog didn't react but continued to stared at a falls. He spoke softly at first.
+Gog didn't react but continued to stare at a falls. He spoke softly at first.
 
 "Why?"
 
@@ -256,7 +256,7 @@ By the time the water came back down to the level of the spill way, after shooti
 
 Today however, it was 'quiet', as the mine goes. The sluice, while destructive, made no more noise than the surrounding river system. The sluice continued to unload its column of vast weight into the cold river.
 
-Grav had decided, and Gog had not objected, to leave the sluice running while the site was unattended. This would keep the wood wet, and not cause undue wear to the spillway trestle work that surely will add up one day, given enough overuse of the boar. This required someone to remember to stop the advance of the sluice at about one palm from quitting time and let the various lookers and feelers do their work, with increasingly less excitement, until there was enough agreement that nothing more was going to be stirred up. If they were in a hurry (everyone had a schedule) they might back up the sluice instead. This, practice vaguely irked the two men.
+Grav had decided, and Gog had not objected, to leave the sluice running while the site was unattended. This would keep the wood wet, and not cause undue wear to the spillway trestle work that surely will add up one day, given enough overuse of the boar. This required someone to remember to stop the advance of the sluice at about one palm from quitting time and let the various lookers and feelers do their work, with increasingly less excitement, until there was enough agreement that nothing more was going to be stirred up. If they were in a hurry (everyone had a schedule) they might back up the sluice instead. This practice vaguely irked the two men.
 
 Grav and Gog made it into the first clearing of the site, stopping from what had become a near sprint; the obstacles to forward progress haven gotten scarce in the last boulder-door men[fn:: A caveperson's capacity to run through any kind of terrain, keeping the fastest pace allowed by circumstances is practically limitless. The idea was to keep up speed, unless there is a reason not to. There are always rests, but if you /can/ run fast you /do/ run fast (unless there is a reason not to.)]. They were winded but not yet out of breath.
 
@@ -268,7 +268,7 @@ The two men headed down a path that most expediently took them to an area that i
 
 After knocking out a lot of growth they were pleased to find that they had a dappling of sunlight for most of the day provided by a mesh above of healthy[fn:: G&G had a Worker dedicated to caring for what they called their 'office-plants', which in this case called for some engineering experience with 'live loads' as well.] variegated, fat, yellow-green leaves sprouting from a cobweb of very determined vine whose corresponding anchoring to the ground was hopelessly undeterminable. It was like a fabric woven of living vine, truly.
 
-Not telling Gog, Grav would occasionally find an interesting stem to clip near the ground just to admire the unpredictable lightening bolt path the murdered vine would trace out along the walls and ceiling after shriveling and browning for a few days. Gog was irked, Grav got some fun out of it. The vines would more than grow back either way.
+Not telling Gog, Grav would occasionally find an interesting stem to clip near the ground just to admire the unpredictable lightning bolt path the murdered vine would trace out along the walls and ceiling after shriveling and browning for a few days. Gog was irked, Grav got some fun out of it. The vines would more than grow back either way.
 
 Gog eventually got determined and after a lot of spying eventually found a cleanly snipped vine near the ground, one or two man into the thick web of vine at the base of a wall, which is a trick to do if your goal is to not kill anything else. Gog was still considering what to do with this evidence.
 
